small update roots
